actualizo rutas de archivos

--- a/Proyecto_Tesis/ConversionCoordenadasRM.ipynb
+++ b/Proyecto_Tesis/ConversionCoordenadasRM.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -27,7 +27,7 @@
         "import geopandas as gpd\n",
         "import matplotlib.pyplot as plt\n",
         "\n",
-        "gdf = gpd.read_file(\"comunas.shx\")\n",
+        "gdf = gpd.read_file(\"/Users/dayth/OneDrive/Escritorio/Comunas/comunas.shx\")\n",
         "\n",
         "gdf.plot()\n",
         "plt.show()\n"
@@ -82,7 +82,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -107,7 +107,7 @@
         "import geopandas as gpd\n",
         "import matplotlib.pyplot as plt\n",
         "\n",
-        "ruta_shp = \"comunas.shp\"\n",
+        "ruta_shp = \"/Users/dayth/OneDrive/Escritorio/Comunas/comunas.shp\"\n",
         "gdf = gpd.read_file(ruta_shp)\n",
         "\n",
         "rm = gdf[gdf['Region'] == \"Región Metropolitana de Santiago\"]\n",
@@ -329,11 +329,13 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "Python 3",
+      "display_name": "scrapecomunas",
+      "language": "python",
       "name": "python3"
     },
     "language_info": {
-      "name": "python"
+      "name": "python",
+      "version": "3.11.9"
     }
   },
   "nbformat": 4,
